# NVIDIA___xr-ai

./: .gitattributes  .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ruff.toml  sonar-project.properties  xr_media_hub.yaml
agent-mcp-servers/oxr-mcp/: pyproject.toml
agent-mcp-servers/oxr-mcp/oxr_mcp_server/: __init__.py  __main__.py
agent-mcp-servers/render-mcp/: pyproject.toml  render_mcp.yaml
agent-mcp-servers/render-mcp/render_mcp/: __init__.py  __main__.py
agent-mcp-servers/render-mcp/xr_app/: conf.lua  main.lua
agent-mcp-servers/transcript-mcp/: pyproject.toml  transcript_mcp_server.yaml
agent-mcp-servers/transcript-mcp/transcript_mcp_server/: __init__.py  __main__.py
agent-mcp-servers/vec-mcp/: pyproject.toml  vec_mcp_server.yaml
agent-mcp-servers/vec-mcp/vec_mcp_server/: __init__.py  __main__.py
agent-mcp-servers/video-mcp/: pyproject.toml  video_mcp_server.yaml
agent-mcp-servers/video-mcp/video_mcp_server/: __init__.py  __main__.py
agent-mcp-servers/vlm-mcp/: pyproject.toml  vlm_mcp_server.yaml
agent-mcp-servers/vlm-mcp/vlm_mcp_server/: __init__.py  __main__.py
agent-samples/cloudxr-agent/: cloudxr_agent.py  cloudxr_runtime.yaml  pyproject.toml  xr_media_hub.yaml
agent-samples/cloudxr-agent/cloudxr_agent/: __main__.py
agent-samples/cloudxr-agent/worker/: cloudxr_agent_worker.py  pyproject.toml
agent-samples/echo-agent/: echo_agent_worker.yaml  pyproject.toml  stt_server.yaml  tts_server.yaml  xr_media_hub.yaml
agent-samples/echo-agent/echo_agent/: __main__.py
agent-samples/echo-agent/worker/: pyproject.toml
agent-samples/mcp-agent/: mcp_agent.py  mcp_agent_worker.yaml  mcp_server.yaml  play_recording.sh  pyproject.toml  stt_server.yaml  transcript_mcp_server.yaml  video_mcp_server.yaml  xr_media_hub.yaml
agent-samples/mcp-agent/mcp_agent/: __main__.py
agent-samples/mcp-agent/mcp_server/: app.py  mcp_server.py  pyproject.toml
agent-samples/mcp-agent/worker/: agent.py  audio.py  mcp_agent_worker.py  pyproject.toml  services.py  voice.py
agent-samples/model-servers/: main.py  pyproject.toml
agent-samples/simple-vlm-example/: main.py  piper_tts_server.yaml  pyproject.toml  simple_vlm_example.py  simple_vlm_example_worker.yaml  stt_server.yaml  vlm_server.yaml  xr_media_hub.yaml
agent-samples/simple-vlm-example/worker/: agent.py  audio.py  pixels.py  pyproject.toml  services.py  simple_vlm_example_worker.py  voice.py
agent-samples/simple-vlm-example/yaml/: models.nim.yaml  models.omni.yaml  models.yaml  piper_tts_server.yaml  simple_vlm_example_worker.yaml  stt_server.yaml  vlm_server.yaml  voice_gate.yaml  xr_media_hub.yaml
agent-samples/vlm-agent/: .gitignore  magpie_tts_server.yaml  piper_tts_server.yaml  pyproject.toml  vlm_agent_worker.yaml.example  vlm_server.yaml
agent-samples/vlm-agent/vlm_agent/: __main__.py
agent-samples/vlm-agent/worker/: pyproject.toml
agent-samples/xr-render-demo/: llama_nemotron_llm_server.yaml  main.py  mistral_minitron_llm_server.yaml  nemotron3_nano_llm_server.yaml  piper_tts_server.yaml  pyproject.toml  stt_server.yaml  vlm_mcp_server.yaml  vlm_server.yaml  xr_media_hub.yaml  xr_render_demo_worker.yaml
agent-samples/xr-render-demo/eval/: README.md  eval.py  eval_watch.sh
agent-samples/xr-render-demo/worker/: agent.py  config.py  pixels.py  processors.py  pyproject.toml  tooling.py  xr_render_demo_worker.py
agent-samples/xr-render-demo/xr_render_demo/: __init__.py  __main__.py
agent-samples/xr-render-demo/yaml/: cloudxr_runtime.yaml  models.nim.yaml  models.yaml  nemotron3_nano_llm_server.yaml  oxr_mcp_server.yaml  piper_tts_server.yaml  stt_server.yaml  video_mcp_server.yaml  vlm_mcp_server.nim.yaml  vlm_server.yaml  xr_media_hub.yaml  xr_render_demo_worker.yaml
agent-sdk/: pyproject.toml
agent-sdk/xr-ai-capabilities/: pyproject.toml
agent-sdk/xr-ai-capabilities/xr_ai_capabilities/: __init__.py  pixels.py  vision.py
agent-sdk/xr-ai-models/: README.md
agent-sdk/xr-ai-models/xr_ai_models/: __init__.py  config.py  factory.py  openai_compat.py  protocols.py
agent-sdk/xr-ai-pipecat/: pyproject.toml
agent-sdk/xr_ai_agent/: __init__.py  _codec.py  _processor.py  _shm.py  _types.py
ai-services/llm-server/: README.md  llm_server.yaml  pyproject.toml
ai-services/stt-server/: pyproject.toml  stt_server.yaml
ai-services/vlm-server/: pyproject.toml  vlm_server.yaml
client-samples/native/: CMakeLists.txt  README.md
cloudxr-runtime/: pyproject.toml
cloudxr-runtime/cloudxr_runtime/: __main__.py
docs/: adding-a-sample.md  (+8 more)
launcher/: pyproject.toml
launcher/xr_ai_launcher/: __init__.py  _cloudxr_env.py  _credentials.py  _hub.py  _processes.py  _project.py  _stack.py
server-runtime/: main.py  pyproject.toml  requirements.txt  xr_media_hub.yaml
server-runtime/xr_media_hub/: __init__.py  __main__.py  _config_loader.py  _errors.py
tests/: README.md  _helpers.py  _helpers_subprocess.py  conftest.py  pyproject.toml  test_agent_codec.py  test_audio_routing.py  test_cross_talk.py  test_gpu_llm_servers.py  test_gpu_magpie_tts.py  test_gpu_stt_server.py  test_gpu_video_mcp.py  test_gpu_video_recorder.py  test_hub_data_routing.py  test_integration_livekit.py  test_launcher_cloudxr_env.py  test_launcher_credentials.py  test_launcher_gpu.py  test_launcher_stack.py  test_local_render_mcp.py  test_logging_setup.py  test_models_config.py  test_models_openai_compat.py  test_multi_agent.py  test_oxr_mcp.py  test_participant_events.py  test_participant_isolation_prefix.py  test_pipecat_audio_resample.py  test_pipecat_services_wire.py  test_piper_tts.py  test_return_audio_flush.py  test_return_audio_pacing.py  test_return_routing.py  test_simple_vlm_example_wire.py  test_subscriptions.py  test_vec_mcp.py  test_vllm_docker.py  test_vllm_lifecycle.py  test_vlm_mcp.py  test_xr_ai_pipecat_voice_pipeline.py  (+3 more)
tests/xr_ai_tests/: __init__.py
utils/xr-ai-logging/: pyproject.toml
utils/xr-ai-vad/: pyproject.toml
utils/xr-ai-voicegate/: pyproject.toml
(+246 files in other folders)
