# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyzmq>=26.0",
    "msgpack>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_agent"]
