[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-media-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # IPC layer
    "pyzmq>=26.0",
    "msgpack>=1.0",
    # LiveKit transport
    "livekit>=0.17",
    "livekit-api>=0.7",
    # Token server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "websockets>=12.0",
    # Media processing
    "numpy>=1.24",
]

[project.scripts]
xr_media_hub = "xr_media_hub.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["xr_media_hub"]
