# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-media-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Agent-SDK (IPC types, codec, SHM, ProcessorEndpoint)
    "xr-ai-agent",
    # IPC layer — server side uses ZMQ directly (connector + hub)
    "pyzmq>=26.0",
    # LiveKit transport
    "livekit>=0.17",
    "livekit-api>=0.7",
    # Token server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "websockets>=12.0",
    # Media processing
    "numpy>=1.24",
    # Config file
    "pyyaml>=6.0",
    # TLS certificate generation
    "cryptography>=42.0",
    # NVENC video recording (opt-in at runtime via video_recording.enabled in YAML)
    "PyNvVideoCodec>=1.0",
]

[project.scripts]
xr_media_hub = "xr_media_hub.__main__:run"

[tool.uv.sources]
xr-ai-agent = { path = "../agent-sdk", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["xr_media_hub"]
