# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-tests"
version = "0.1.0"
description = "Multi-client / multi-agent integration tests for xr-ai."
requires-python = ">=3.11,<3.13"
dependencies = [
    # Pulled in via editable installs of the workspace packages.
    "xr-ai-agent",
    "xr-ai-models",
    "xr-ai-pipecat",
    "xr-media-hub",
    "xr-ai-launcher",
    "xr-ai-logging",
    "xr-ai-vad",
    "xr-ai-voicegate",
    "xr-ai-vllm",
    # MCP servers exercised by subprocess tests (fastmcp pulled in transitively).
    "transcript-mcp-server",
    "vlm-mcp-server",
    "render-mcp",
    "video-mcp-server",
    "vec-mcp-server",
    # Test runner.
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "numpy>=1.24",
    # GPU/MCP test deps — only exercised by tests marked `gpu`.
    "fastmcp>=2.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
xr-ai-agent           = { path = "../agent-sdk",                        editable = true }
xr-ai-models          = { path = "../agent-sdk/xr-ai-models",           editable = true }
xr-ai-pipecat         = { path = "../agent-sdk/xr-ai-pipecat",          editable = true }
xr-media-hub          = { path = "../server-runtime",                   editable = true }
xr-ai-launcher        = { path = "../utils/xr-ai-launcher",             editable = true }
xr-ai-logging         = { path = "../utils/xr-ai-logging",              editable = true }
xr-ai-vad             = { path = "../utils/xr-ai-vad",                  editable = true }
xr-ai-voicegate       = { path = "../utils/xr-ai-voicegate",            editable = true }
xr-ai-vllm            = { path = "../utils/xr-ai-vllm",                 editable = true }
transcript-mcp-server = { path = "../agent-mcp-servers/transcript-mcp", editable = true }
vlm-mcp-server        = { path = "../agent-mcp-servers/vlm-mcp",        editable = true }
render-mcp            = { path = "../agent-mcp-servers/render-mcp",     editable = true }
video-mcp-server      = { path = "../agent-mcp-servers/video-mcp",      editable = true }
vec-mcp-server        = { path = "../agent-mcp-servers/vec-mcp",        editable = true }

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["."]
markers = [
    "gpu: requires local GPU / Docker / NVENC; skipped in CI",
    "integration: spawns a real server subprocess (CPU-only); runs in CI",
]
