[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcript-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.29",
    "fastmcp>=0.4",
    "pyyaml>=6.0",
]

[project.scripts]
transcript_mcp_server = "transcript_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["transcript_mcp_server"]
