[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "fastmcp>=0.4",
    "pyyaml>=6.0",
]

[project.scripts]
video_mcp_server = "video_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["video_mcp_server"]
