# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-mcp-server"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn[standard]>=0.29",
    "fastmcp>=2.0",
    "pyyaml>=6.0",
    # Frame querying — connects to the hub via IPC and decodes H.264 chunks.
    "xr-ai-agent",
    "xr-ai-logging",
    "PyNvVideoCodec>=1.0",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[tool.uv.sources]
xr-ai-agent   = { path = "../../agent-sdk", editable = true }
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }

[project.scripts]
video_mcp_server = "video_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["video_mcp_server"]
