# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-mcp-server"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn[standard]>=0.29",
    "fastmcp>=0.4",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.scripts]
vlm_mcp_server = "vlm_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["vlm_mcp_server"]
