[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-media-hub @ ../../server-runtime",
    "xr-ai-launcher @ ../../launcher",
    "numpy>=1.24",
]

[project.scripts]
echo_agent = "echo_agent.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["echo_agent"]
