[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-media-hub",
    "xr-ai-launcher",
    "numpy>=1.24",
]

[tool.uv.sources]
xr-media-hub = { path = "../../server-runtime", editable = true }
xr-ai-launcher = { path = "../../launcher", editable = true }

[project.scripts]
echo_agent = "echo_agent.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["echo_agent"]
