[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-vlm-example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-ai-launcher",
]

[tool.uv.sources]
xr-ai-launcher = { path = "../../launcher", editable = true }

[project.scripts]
simple_vlm_example = "simple_vlm_example:run"

[tool.hatch.build.targets.wheel]
only-include = ["simple_vlm_example.py"]
