# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-vlm-example"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-launcher",
    "xr-ai-logging",
    "pyyaml>=6.0",
]

[tool.uv.sources]
xr-ai-launcher = { path = "../../utils/xr-ai-launcher", editable = true }
xr-ai-logging  = { path = "../../utils/xr-ai-logging", editable = true }

[project.scripts]
simple_vlm_example = "main:run"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
