[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-ai-launcher",
]

[tool.uv.sources]
xr-ai-launcher = { path = "../../launcher", editable = true }

[project.scripts]
vlm_agent = "vlm_agent.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["vlm_agent"]
