# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-capabilities"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "xr-ai-models",
    "numpy>=1.24",
    "Pillow>=10.0",   # pixels.py (frame → PIL → JPEG)
]

[tool.uv.sources]
xr-ai-agent   = { path = "..", editable = true }
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
xr-ai-models  = { path = "../xr-ai-models",           editable = true }

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_capabilities"]
