# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-pipecat"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "xr-ai-models",
    "pipecat-ai>=0.0.46",
    "numpy>=1.24",
    "scipy>=1.11",
    "httpx>=0.27",
    "fastmcp>=0.4",
]

[tool.uv.sources]
xr-ai-agent   = { path = "..", editable = true }
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
xr-ai-models  = { path = "../xr-ai-models", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_pipecat"]
