[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.49",
    "accelerate>=0.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "hf-transfer>=0.1.4",
    "pyyaml>=6.0",
]

[project.scripts]
llm_server = "llm_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["llm_server"]
