[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stt-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "nemo_toolkit[asr]>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.scripts]
stt_server = "stt_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["stt_server"]
