[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.49",
    "accelerate>=0.30",
    "qwen-vl-utils>=0.0.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "hf-transfer>=0.1.4",
    "pyyaml>=6.0",
]

[project.scripts]
vlm_server = "vlm_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["vlm_server"]
