[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudxr-agent-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-ai-agent",
]

[tool.uv.sources]
xr-ai-agent = { path = "../../../agent-sdk", editable = true }

[project.scripts]
cloudxr_agent_worker = "cloudxr_agent_worker.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["cloudxr_agent_worker"]
