# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transcript-mcp-server",
    "video-mcp-server",
    "xr-ai-agent",
    "fastmcp>=0.4",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]

[tool.uv.sources]
transcript-mcp-server = { path = "../../../agent-mcp-servers/transcript-mcp", editable = true }
video-mcp-server      = { path = "../../../agent-mcp-servers/video-mcp",      editable = true }
xr-ai-agent           = { path = "../../../agent-sdk",                        editable = true }

[project.scripts]
mcp_server = "mcp_server:run"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_server.py", "app.py"]
